--- a/package.json
+++ b/package.json
@@ -2,23 +2,75 @@
   "name": "budget-calculator-app",
   "version": "1.0.0",
   "description": "Complete Budget, Savings & Expense Calculator with Charts",
+  "main": "electron/main.js",
   "private": true,
+  "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron": "electron .",
+    "electron-dev": "concurrently \"npm start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-build": "npm run build && electron-builder",
+    "electron-build-mac": "npm run build && electron-builder --mac"
   },
-  "keywords": ["budget", "calculator", "savings", "expense", "react", "charts"],
+  "keywords": [
+    "budget",
+    "calculator",
+    "savings",
+    "expense",
+    "react",
+    "charts",
+    "electron"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "dexie": "^3.2.4",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.10.3",
-    "xlsx": "^0.18.5",
-    "dexie": "^3.2.4"
+    "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2",
+    "electron": "^28.0.0",
+    "electron-builder": "^24.9.1",
+    "wait-on": "^7.2.0"
+  },
+  "build": {
+    "appId": "com.budgetcalculator.app",
+    "productName": "Budget Calculator",
+    "directories": {
+      "buildResources": "build"
+    },
+    "files": [
+      "build/**/*",
+      "electron/**/*",
+      "node_modules/**/*"
+    ],
+    "mac": {
+      "category": "public.app-category.finance",
+      "target": "dmg",
+      "icon": "build/icon.icns"
+    },
+    "dmg": {
+      "contents": [
+        {
+          "x": 110,
+          "y": 150
+        },
+        {
+          "x": 240,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ]
+    }
   },
   "eslintConfig": {
     "extends": [
@@ -38,4 +90,3 @@
     ]
   }
 }
-
