--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,4 +2,10 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
 python-multipart==0.0.6
+openpyxl==3.1.2
+pandas==2.1.4
+gspread==5.12.0
+google-auth==2.25.2
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.2.0
 
