--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "license": "MIT",
   "dependencies": {
     "dexie": "^3.2.4",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
