--- a/package.json
+++ b/package.json
@@ -2,18 +2,13 @@
   "name": "budget-calculator-app",
   "version": "1.0.0",
   "description": "Complete Budget, Savings & Expense Calculator with Charts",
-  "main": "electron/main.js",
   "private": true,
-  "homepage": "./",
+  "homepage": "https://Kethar11.github.io/budget-calculator-app",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "electron": "electron .",
-    "electron-dev": "concurrently \"npm start\" \"wait-on http://localhost:3000 && electron .\"",
-    "electron-build": "npm run build && electron-builder",
-    "electron-build-mac": "npm run build && electron-builder --mac"
+    "eject": "react-scripts eject"
   },
   "keywords": [
     "budget",
@@ -21,8 +16,7 @@
     "savings",
     "expense",
     "react",
-    "charts",
-    "electron"
+    "charts"
   ],
   "author": "",
   "license": "MIT",
@@ -36,43 +30,6 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.10.3",
     "xlsx": "^0.18.5"
-  },
-  "devDependencies": {
-    "concurrently": "^8.2.2",
-    "electron": "^28.0.0",
-    "electron-builder": "^24.9.1",
-    "wait-on": "^7.2.0"
-  },
-  "build": {
-    "appId": "com.budgetcalculator.app",
-    "productName": "Budget Calculator",
-    "directories": {
-      "buildResources": "build"
-    },
-    "files": [
-      "build/**/*",
-      "electron/**/*",
-      "node_modules/**/*"
-    ],
-    "mac": {
-      "category": "public.app-category.finance",
-      "target": "dmg",
-      "icon": "build/icon.icns"
-    },
-    "dmg": {
-      "contents": [
-        {
-          "x": 110,
-          "y": 150
-        },
-        {
-          "x": 240,
-          "y": 150,
-          "type": "link",
-          "path": "/Applications"
-        }
-      ]
-    }
   },
   "eslintConfig": {
     "extends": [
