--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.10.3",
     "xlsx": "^0.18.5",
-    "dexie": "^3.2.4"
+    "dexie": "^3.2.4",
+    "lucide-react": "^0.294.0"
   },
   "eslintConfig": {
     "extends": [
