--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "recharts": "^2.10.3",
     "xlsx": "^0.18.5",
     "dexie": "^3.2.4",
-    "lucide-react": "^0.294.0"
+    "lucide-react": "^0.294.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2"
   },
   "eslintConfig": {
     "extends": [
